force-app/main/default/objects/Salesforce_Support_Priorities__c.object
<CustomObject>
    <fields>
        <fullName>Teams__c</fullName>
        <label>Teams</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Audit/HSE</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Help Desk</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Data Quality</fullName>
                </value>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Fields Sales</fullName>
                </value>
                <value>
                    <fullName>High Value Supplier</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>IPM</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Sales Ops</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Supplier Ops</fullName>
                </value>
                <value>
                    <fullName>Supplier Retention</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Priority_Case_Name__c</fullName>
        <formula>X1st_Priority__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(1) Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Priority_Deploy_Date__c</fullName>
        <formula>if( X1st_Priority__c != Null,
    if(text(X1st_Priority__r.Sprint__r.Deployment_Date__c) != Null, text(X1st_Priority__r.Sprint__r.Deployment_Date__c), &quot;Not Yet on Sprint&quot;),
			 &quot;&quot;
)</formula>
        <label>(1) Deploy Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Priority_Status__c</fullName>
        <formula>text(X1st_Priority__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(1) Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st Priority</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The case must be an Avetta Salesforce Support case.</errorMessage>
            <filterItems>
                <field>Case.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.X2nd_Priority__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.X3rd_Priority__c</valueField>
            </filterItems>
            <infoMessage>Enter the case number of your first priority.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Salesforce Support Priorities</relationshipLabel>
        <relationshipName>Salesforce_Support_Priorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Priority_Case_Name__c</fullName>
        <formula>X2nd_Priority__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(2) Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Priority_Case_Status__c</fullName>
        <formula>text(X2nd_Priority__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(2) Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Priority_Deploy_Date__c</fullName>
        <formula>if( X2nd_Priority__c != Null,
    if(text( X2nd_Priority__r.Sprint__r.Deployment_Date__c ) != Null, text( X2nd_Priority__r.Sprint__r.Deployment_Date__c ), &quot;Not Yet on Sprint&quot;),
			 &quot;&quot;
)</formula>
        <label>(2) Deploy Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Priority</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Salesforce Support Priorities (2nd Priority)</relationshipLabel>
        <relationshipName>Salesforce_Support_Priorities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Priority_Case_Name__c</fullName>
        <formula>X3rd_Priority__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(3) Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Priority_Case_Status__c</fullName>
        <formula>text( X3rd_Priority__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(3) Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Priority_Deploy_Date__c</fullName>
        <formula>if( X3rd_Priority__c != Null,
    if(text(X3rd_Priority__r.Sprint__r.Deployment_Date__c ) != Null, text(X3rd_Priority__r.Sprint__r.Deployment_Date__c), &quot;Not Yet on Sprint&quot;),
    &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(3) Deploy Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Avetta Salesforce Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Salesforce Support Priorities (3rd Priority)</relationshipLabel>
        <relationshipName>Salesforce_Support_Priorities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Salesforce Support Priorities</label>
    <listViews>
        <fullName>Client_Priorities</fullName>
        <columns>NAME</columns>
        <columns>X1st_Priority__c</columns>
        <columns>X1st_Priority_Case_Name__c</columns>
        <columns>X1st_Priority_Deploy_Date__c</columns>
        <columns>X2nd_Priority__c</columns>
        <columns>X2nd_Priority_Case_Name__c</columns>
        <columns>X2nd_Priority_Deploy_Date__c</columns>
        <columns>X3rd_Priority__c</columns>
        <columns>X3rd_Priority_Case_Name__c</columns>
        <columns>X3rd_Priority_Deploy_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Sales Ops,Field Sales,AM,SDR</value>
        </filters>
        <label>Client Priorities</label>
        <sharedTo>
            <role>SalesManagement</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Priorities</fullName>
        <columns>NAME</columns>
        <columns>X1st_Priority__c</columns>
        <columns>X1st_Priority_Case_Name__c</columns>
        <columns>X1st_Priority_Deploy_Date__c</columns>
        <columns>X1st_Priority_Status__c</columns>
        <columns>X2nd_Priority__c</columns>
        <columns>X2nd_Priority_Case_Name__c</columns>
        <columns>X2nd_Priority_Deploy_Date__c</columns>
        <columns>X2nd_Priority_Case_Status__c</columns>
        <columns>X3rd_Priority__c</columns>
        <columns>X3rd_Priority_Case_Name__c</columns>
        <columns>X3rd_Priority_Deploy_Date__c</columns>
        <columns>X3rd_Priority_Case_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>supplier Retention,Registration,Client Mailings</value>
        </filters>
        <label>My Priorities</label>
    </listViews>
    <listViews>
        <fullName>Priority_Summary_View</fullName>
        <columns>NAME</columns>
        <columns>X1st_Priority__c</columns>
        <columns>X1st_Priority_Case_Name__c</columns>
        <columns>X1st_Priority_Deploy_Date__c</columns>
        <columns>X2nd_Priority__c</columns>
        <columns>X2nd_Priority_Case_Name__c</columns>
        <columns>X2nd_Priority_Deploy_Date__c</columns>
        <columns>X3rd_Priority__c</columns>
        <columns>X3rd_Priority_Case_Name__c</columns>
        <columns>X3rd_Priority_Deploy_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Priority Summary View</label>
    </listViews>
    <nameField>
        <label>Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Support Priorities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_Remove_if_on_Sprint</fullName>
        <active>true</active>
        <errorConditionFormula>or(
and(
/* Salesforce Team*/
$Profile.Id != &quot;00e0g0000010DWt&quot;,
/*Development*/
$Profile.Id != &quot;00e0g000001WNfo&quot;,
/*System Administrator*/
$Profile.Id != &quot;00e70000000tKSw&quot;,
PRIORVALUE(X1st_Priority_Status__c) != &quot;Deployed&quot;,
PRIORVALUE(X1st_Priority_Status__c) != &quot;Denied&quot;,
PRIORVALUE(X1st_Priority_Status__c) != &quot;Resolved&quot;,
X1st_Priority__c != PRIORVALUE (X1st_Priority__c) &amp;&amp;
or(PRIORVALUE(X1st_Priority_Deploy_Date__c) != &quot;Not Yet on Sprint&quot;),
PRIORVALUE(X1st_Priority_Deploy_Date__c) != &quot;&quot;
),

and(
/* Salesforce Team*/
$Profile.Id != &quot;00e0g0000010DWt&quot;,
/*Development*/
$Profile.Id != &quot;00e0g000001WNfo&quot;,
/*System Administrator*/
$Profile.Id != &quot;00e70000000tKSw&quot;,
PRIORVALUE(X2nd_Priority_Case_Status__c ) != &quot;Deployed&quot;,
PRIORVALUE(X2nd_Priority_Case_Status__c ) != &quot;Denied&quot;,
PRIORVALUE(X2nd_Priority_Case_Status__c ) != &quot;Resolved&quot;,
X2nd_Priority__c != PRIORVALUE (X2nd_Priority__c) &amp;&amp;
or(PRIORVALUE(X2nd_Priority_Deploy_Date__c) != &quot;Not Yet on Sprint&quot;),
PRIORVALUE(X2nd_Priority_Deploy_Date__c) != &quot;&quot;
),

and(
/* Salesforce Team*/
$Profile.Id != &quot;00e0g0000010DWt&quot;,
/*Development*/
$Profile.Id != &quot;00e0g000001WNfo&quot;,
/*System Administrator*/
$Profile.Id != &quot;00e70000000tKSw&quot;,
PRIORVALUE(X3rd_Priority_Case_Status__c ) != &quot;Deployed&quot;,
PRIORVALUE(X3rd_Priority_Case_Status__c ) != &quot;Denied&quot;,
PRIORVALUE(X3rd_Priority_Case_Status__c ) != &quot;Resolved&quot;,
X3rd_Priority__c != PRIORVALUE (X3rd_Priority__c) &amp;&amp;
or(PRIORVALUE(X3rd_Priority_Deploy_Date__c) != &quot;Not Yet on Sprint&quot;),
PRIORVALUE(X3rd_Priority_Deploy_Date__c) != &quot;&quot;
)

)</errorConditionFormula>
        <errorMessage>You may not remove or change a priority that already has a deployment date set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Duplicate_Priorities</fullName>
        <active>true</active>
        <errorConditionFormula>or(
    if(X2nd_Priority__c != Null, X1st_Priority__c = X2nd_Priority__c, False),
				if(X3rd_Priority__c != Null, X1st_Priority__c = X3rd_Priority__c, False),
    if(X3rd_Priority__c != Null, X2nd_Priority__c = X3rd_Priority__c, False),
				if(X1st_Priority__c != Null, X2nd_Priority__c = X1st_Priority__c, False),
				if(X1st_Priority__c != Null, X3rd_Priority__c = X1st_Priority__c, False),
				if(X2nd_Priority__c != Null, X3rd_Priority__c = X2nd_Priority__c, False)
)</errorConditionFormula>
        <errorMessage>You may not enter duplicate values.</errorMessage>
    </validationRules>
</CustomObject>